git-annex (5.20140118) UNRELEASED; urgency=medium

  * Remove --json option from commands not supporting it.

 -- Joey Hess <joeyh@debian.org>  Sat, 18 Jan 2014 11:54:17 -0400

git-annex (5.20140117) unstable; urgency=medium

  * Really fix FTBFS on mipsel and sparc due to test suite not being available
    on those architectures.

 -- Joey Hess <joeyh@debian.org>  Fri, 17 Jan 2014 14:46:27 -0400

git-annex (5.20140116) unstable; urgency=medium

  * Added tahoe special remote.
  * external special remote protocol: Added GETGITDIR, and GETAVAILABILITY.
  * Refuse to build with git older than 1.7.1.1, which is needed for
    git checkout -B
  * map: Fix display of v5 direct mode repos.
  * repair: Support old git versions from before git fsck --no-dangling was
    implemented.
  * Fix a long-standing bug that could cause the wrong index file to be used
    when committing to the git-annex branch, if GIT_INDEX_FILE is set in the
    environment. This typically resulted in git-annex branch log files being
    committed to the master branch and later showing up in the work tree.
    (These log files can be safely removed.)
  * assistant: Detect if .git/annex/index is corrupt at startup, and
    recover.
  * repair: Fix bug in packed refs file exploding code that caused a .gitrefs
    directory to be created instead of .git/refs
  * Fix FTBFS on mipsel and sparc due to test suite not being available
    on those architectures.
  * Android: Avoid passing --clobber to busybox wget.

 -- Joey Hess <joeyh@debian.org>  Thu, 16 Jan 2014 11:34:54 -0400

git-annex (5.20140107) unstable; urgency=medium

  * mirror: Support --all (and --unused).
  * external special remote protocol: Added GETUUID, GETWANTED, SETWANTED,
    SETSTATE, GETSTATE, DEBUG.
  * Windows: Fix bug in direct mode merge code that could cause files
    in subdirectories to go missing.
  * Windows: Avoid eating stdin when running ssh to add a authorized key,
    since this is used for password prompting.